Fixed Blurry Enchanted Items & added Items locking to pixel grid when dragged

--- a/src/style.css
+++ b/src/style.css
@@ -29,9 +29,14 @@
     border-image-width: var(--border-image-width);
 }
 
-/* svg { */
-/*   transform: translateZ(0);  /* own compositing layer (removes blur from chrome) */ 
-/* } */
+svg {
+  image-rendering: pixelated;
+  transform: translatez(0);  /* own compositing layer (removes blur from chrome) */
+}
+image {
+  image-rendering: pixelated;
+  transform: translatez(0);  /* own compositing layer (removes blur from chrome) */
+}
 
 .minecraftText {
     user-select: none;
